--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 					</a>
 				</div>
 				<div class="places__column places__column--2">
-					<img src="/img/image2.jpg" alt="river house" class="places__photo places__photo--1">
-					<img src="/img/image3.jpg" alt="sun & wood & rock" class="places__photo places__photo--2"></div>
+					<img src="img/Image2.jpg" alt="river house" class="places__photo places__photo--1">
+					<img src="img/Image3.jpg" alt="sun & wood & rock" class="places__photo places__photo--2"></div>
 			</div>
 		</section>
 		<section class="icons">
