--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<p>Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee</p>
 						<p>Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
 					</div>
-					<a href="#" class="places__btn btn">
+					<a href="#" class="places__btn btn" target="_blank">
 						explore places
 					</a>
 				</div>
@@ -85,7 +85,7 @@
 				<p class="object__name">Spain</p>
 				<h2 class="object__title">Grand Spain Madrid</h2>
 				<p class="object__text">But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-				<a href="#" class="object__btn btn">Book Now
+				<a href="#" class="object__btn btn" target="_blank">Book Now
 				</a>
 			</div>
 			</div>
@@ -96,7 +96,7 @@
 				<p class="object__name">Spain</p>
 				<h2 class="object__title">Grand Spain Madrid</h2>
 				<p class="object__text">But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-				<a href="#" class="object__btn btn">Book Now
+				<a href="#" class="object__btn btn" target="_blank">Book Now
 				</a>
 			</div>
 			</div>
@@ -123,19 +123,19 @@
 			<h2 class="footer__title">Bhromaon</h2>
 			<p class="footer__text">Safe Travel Anywhere</p>
 			<div class="footer__social">
-				<a href="#" class="footer__link">
+				<a href="#" class="footer__link" target="_blank">
 					<i class="fab fa-facebook-f"></i>
 				</a>
-				<a href="#" class="footer__link">
+				<a href="#" class="footer__link" target="_blank">
 					<i class="fab fa-twitter"></i>
 				</a>
-				<a href="#" class="footer__link">
+				<a href="#" class="footer__link" target="_blank">
 					<i class="fab fa-linkedin-in"></i>
 				</a>
-				<a href="#" class="footer__link">
+				<a href="#" class="footer__link" target="_blank">
 					<i class="fab fa-youtube"></i>
 				</a>
-				<a href="#" class="footer__link">
+				<a href="#" class="footer__link" target="_blank">
 					<i class="fab fa-pinterest"></i>
 				</a>
 			</div>
